[package]
name = "mono_event"
version.workspace = true
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "super fast event system"
repository = "https://github.com/Bruce0203/mono_event"
license = "MIT"
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
mono_event_derive = { path = "../mono_event_derive" } 
