[package]
name = "mono_event"
version.workspace = true
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "super fast event system"
repository = "https://github.com/Bruce0203/mono_event"
license = "MIT"
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
mono_event_derive = { path = "../mono_event_derive", version = "0.5.0" } 
loop-code = "0.5.2"

[dev-dependencies]
criterion = "0.5.1"
loop-code = "0.5.2"

[[bench]]
name = "bench"
harness = false
